Enhance index.html with sustainability section
Added a new section on sustainable commitment and updated the existing content.

--- a/index.html
+++ b/index.html
@@ -206,10 +206,28 @@
         <div class="realisations">
             <div class="realisations-card">
                 <img src="realisation.png" alt="Projet réalisé 1">
-                <p>Projet 1 – rénovation bureaux</p>
             </div>
         </div>
     </div>
+	
+	<div class="box" id="engagement">
+    <h2>Notre Engagement pour un Avenir Durable</h2>
+    <ul>
+        <li>
+            <strong>Respect Environnemental :</strong><br>
+            Utilisation systématique de produits et matériaux écologiques pour réduire notre impact sur l'environnement et promouvoir des pratiques durables.
+        </li>
+        <li>
+            <strong>Équilibre Professionnel :</strong><br>
+            Politique d'horaires adaptée pour favoriser l'harmonie entre vie professionnelle et personnelle de nos employés, garantissant bien-être et efficacité.
+        </li>
+        <li>
+            <strong>Sécurité Prioritaire :</strong><br>
+            Actions de prévention et formation continue pour réduire les risques d'accidents et assurer un environnement de travail sécurisé pour tous.
+        </li>
+    </ul>
+	</div>
+
 
     <div class="box" id="valeurs">
         <h2>Nos valeurs fondamentales</h2>
