Refactor index.html with updated content and structure

--- a/index.html
+++ b/index.html
@@ -200,6 +200,17 @@
             </div>
         </div>
     </div>
+	
+	<div class="box" id="marche">
+    <h2>Notre Marché et Nos Services</h2>
+    <ul>
+        <li><strong>Grandes Entreprises :</strong> Services adaptés aux besoins spécifiques des corporations</li>
+        <li><strong>Gestionnaires d’Immeubles :</strong> Solutions complètes pour l'entretien et la rénovation</li>
+        <li><strong>Travaux Tous Corps d'État :</strong> Revêtements muraux, revêtements de sol, installation de chantier, menuiserie, plâtrerie...</li>
+        <li><strong>Nettoyage Professionnel :</strong> Entretien courant et périodique des espaces</li>
+    </ul>
+</div>
+
 
     <div class="box" id="realisations">
         <h2>Nos Réalisations</h2>
